# obstask

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml
obstask/: agent.py  cli.py  create.py  load.py  models.py
obstask/templates/: Meeting.md  People.md  Project.md  Task.md
